# poetry-monorepo-dependencies

./: README.md  projects.code-workspace
lib/utils/: pyproject.toml
lib/utils/src/common/constants/: enums.py
projects/internal_api/: pyproject.toml  test.py
projects/public_api/: pyproject.toml
