[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["jujumilk3 <jujumilk3@gmail.com>"]
packages = [
    { include = "common", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "2023.3"
pydantic = "1.10.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
